changed board to vector and started the competition manager

--- a/Battleship_ex3/Battleship_ex3.vcxproj
+++ b/Battleship_ex3/Battleship_ex3.vcxproj
@@ -123,6 +123,7 @@
   <ItemGroup>
     <ClInclude Include="BattleshipGame.h" />
     <ClInclude Include="BattleshipPlayerSmart.h" />
+    <ClInclude Include="CompetitionManager.h" />
     <ClInclude Include="GameUtils.h" />
     <ClInclude Include="IBattleshipGameAlgo.h" />
     <ClInclude Include="OurBoardData.h" />
@@ -130,6 +131,7 @@
   <ItemGroup>
     <ClCompile Include="BattleshipGame.cpp" />
     <ClCompile Include="BattleshipPlayerSmart.cpp" />
+    <ClCompile Include="CompetitionManager.cpp" />
     <ClCompile Include="GameUtils.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="OurBoardData.cpp" />
