--- a/Battleship_ex3/Battleship_ex3.vcxproj.filters
+++ b/Battleship_ex3/Battleship_ex3.vcxproj.filters
@@ -65,6 +65,9 @@
     <ClInclude Include="CompetitionManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PlayerComb.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -83,6 +86,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="CompetitionManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PlayerComb.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
