--- a/Battleship_ex3/Battleship_ex3.vcxproj
+++ b/Battleship_ex3/Battleship_ex3.vcxproj
@@ -123,6 +123,7 @@
   <ItemGroup>
     <ClInclude Include="BattleshipGame.h" />
     <ClInclude Include="BattleshipPlayerSmart.h" />
+    <ClInclude Include="BSLogger.h" />
     <ClInclude Include="CompetitionManager.h" />
     <ClInclude Include="GameUtils.h" />
     <ClInclude Include="IBattleshipGameAlgo.h" />
@@ -132,6 +133,7 @@
   <ItemGroup>
     <ClCompile Include="BattleshipGame.cpp" />
     <ClCompile Include="BattleshipPlayerSmart.cpp" />
+    <ClCompile Include="BSLogger.cpp" />
     <ClCompile Include="CompetitionManager.cpp" />
     <ClCompile Include="GameUtils.cpp" />
     <ClCompile Include="main.cpp" />
