changed the loading of the players

--- a/.gitignore
+++ b/.gitignore
@@ -254,3 +254,4 @@ ModelManifest.xml
 /Battleship_ex3/3d_board_10x10x6_1.sboard
 /Battleship_ex3/3d_board_10x10x6_0.sboard
 /Battleship_ex3/3d_board_10x10x1_1.sboard
+/enc_temp_folder
