--- a/.gitignore
+++ b/.gitignore
@@ -255,3 +255,6 @@ ModelManifest.xml
 /Battleship_ex3/3d_board_10x10x6_0.sboard
 /Battleship_ex3/3d_board_10x10x1_1.sboard
 /enc_temp_folder
+/Battleship_ex3/player.dll
+/Battleship_ex3/player - Copy.dll
+/Battleship_ex3/player - Copy (7).dll
