--- a/.gitignore
+++ b/.gitignore
@@ -258,3 +258,16 @@ ModelManifest.xml
 /Battleship_ex3/player.dll
 /Battleship_ex3/player - Copy.dll
 /Battleship_ex3/player - Copy (7).dll
+/Battleship_ex3/adamreiter.smart.dll
+/Battleship_ex3/adamreiter.smart - Copy.dll
+/Battleship_ex3/adamreiter.smart - Copy (9).dll
+/Battleship_ex3/adamreiter.smart - Copy (10).dll
+/Battleship_ex3/player4.dll
+/Battleship_ex3/Player3.dll
+/Battleship_ex3/player2.dll
+/Battleship_ex3/Smart.dll
+/3d_board_10x10x1_1.sboard
+/3d_board_15x15x15_1.sboard
+/3d_board_15x15x15_0.sboard
+/3d_board_10x10x6_1.sboard
+/3d_board_10x10x6_0.sboard
