--- a/Battleship_ex3/Battleship_ex3.vcxproj.filters
+++ b/Battleship_ex3/Battleship_ex3.vcxproj.filters
@@ -88,5 +88,8 @@
     <ClCompile Include="GameUtils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BSLogger.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
